--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,6 +18,6 @@
   </div>
   {% include footer.html %}
   {% include googleanalytics.html %}
-	{% include comments.md}
+	{% include comments.md %}
 </body>
 </html>
