--- a/public/css/base.css
+++ b/public/css/base.css
@@ -120,7 +120,9 @@ blockquote p {
   background-color: #303030;
 }
 /* 显示评论按钮 */
+/*
 .show-commend {
   width: 100%;
   margin-bottom: 40px;
 }
+*/
