--- a/public/css/base.css
+++ b/public/css/base.css
@@ -103,7 +103,8 @@ body, html {
   line-height: 1.42857143;
 }
 #content {
-  font-size: 4px;
+  font-size: 1px;
+	color: #000000
 }
 #content h2, h3 {
   line-height: 2;
