--- a/public/css/base.css
+++ b/public/css/base.css
@@ -103,8 +103,9 @@ body, html {
   line-height: 1.42857143;
 }
 #content {
-  font-size: 16px;
+  font-size: 14px;
   color: #000000;
+	.selector {font-family:"Microsoft YaHei",微软雅黑,"Microsoft JhengHei",华文细黑,STHeiti,MingLiu}
 }
 #content h2, h3 {
   line-height: 2;
