--- a/public/css/base.css
+++ b/public/css/base.css
@@ -105,7 +105,7 @@ body, html {
 #content {
   font-size: 14px;
   color: #000000;
-	.selector {font-family:"Microsoft YaHei",微软雅黑,"Microsoft JhengHei",华文细黑,STHeiti,MingLiu}
+	font-family: "Microsoft YaHei";
 }
 #content h2, h3 {
   line-height: 2;
