--- a/public/css/base.css
+++ b/public/css/base.css
@@ -100,15 +100,16 @@ body, html {
 */  
   padding: 0 5% 0 5%;
   color: #656565;
-  line-height: 1.42857143;
+  /*line-height: 1.42857143;*/
+  line-height: 0.5;
 }
 #content {
   font-size: 16px;
   color: #000000;
-	font-family: "Microsoft YaHei";
+  font-family: "Microsoft YaHei";
 }
 #content h2, h3 {
-  line-height: 2;
+  line-height: 0.5;
 }
 blockquote p {
   font-size: 20px;
