--- a/public/css/base.css
+++ b/public/css/base.css
@@ -101,12 +101,13 @@ body, html {
   padding: 0 5% 0 5%;
   color: #656565;
   /*line-height: 1.42857143;*/
-  line-height: 1;
+  line-height: 1.5;
 }
 #content {
   font-size: 16px;
   color: #000000;
   font-family: "Microsoft YaHei";
+  line-height: 1.5
 }
 #content h2, h3 {
   line-height: 2;
