--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
           {% include googleanalytics.md %}
         </p>
         <p><small>
-            <a href="http://github.com/{{ site.github }}/duyanghao.github.io/" target="_blank" title="撰写文章">Po</a>wer<a href="http://github.com/{{ site.github }}/duyanghao.github.io/" target="_blank" title="编辑页面">ed</a> by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a href="http://github.com/{{ site.github }}/duyanghao.github.io" target="_blank" title="项目主页">GitHub</a>
+            <a href="http://github.com/{{ site.github }}/duyanghao.github.io/" target="_blank" title="撰写文章">Po</a>wer<a href="http://github.com/{{ site.github }}/duyanghao.github.io/" target="_blank" title="编辑页面">ed</a> by <a href="http://jekyllrb.com" target="_blank">Jekyll</a> @ <a href="http://github.com/{{ site.github }}/" target="_blank" title="项目主页">GitHub</a>
              | <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/cn/" target="_blank" title="许可协议">©</a> 2014 - {{site.time | date:"%Y"}} <a href="/about/">{{ site.author }}</a>
              | <a href="http://my.csdn.net/u011725603" target="_blank">@csdn</a>
 {% if site.beian %}
