--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <h1>{{ page.title }}</h1>
         </header>
         <nav>
-				<span><a title="图标" class="" href="/public/img/github.jpg"></a></span>
+				<img src="/public/img/github.jpg"  alt="logo" />
         <span><a title="网站首页" class="" href="/">首页</a></span>
         <span><a title="文章分类" class="" href="/categories/">分类</a></span>
         <span><a title="标签索引" class="" href="/tags/">标签</a></span>
