--- a/media/css/style.css
+++ b/media/css/style.css
@@ -60,7 +60,7 @@ embed,object,iframe{display:block;margin:4px auto;}
 .gist{font-size: 12px;line-height:1.6;}
 
 footer{
-text-align:center;
+/*text-align:center;*/
 display:block;
 border-top: 1px dashed #CCC;
 }
