--- a/media/css/home.css
+++ b/media/css/home.css
@@ -378,7 +378,7 @@ padding:8px 12px;
 margin-left:0;
 margin-bottom:30px;
 list-style:none;
-/*text-align:center;*/
+text-align:center;
 zoom:1px;
 }
 
