--- a/media/css/style.css
+++ b/media/css/style.css
@@ -40,6 +40,10 @@ blockquote p{margin:0;padding:.5em 0;}
 
 }
 
+.center {
+text-align: left;
+}
+
 .listing-item time{color:#999999;}
 .listing-seperator{font-weight:bold;}
 .meta{font-size:12px;color:#888;}
