--- a/media/css/style.css
+++ b/media/css/style.css
@@ -13,8 +13,8 @@
 @import url(http://fonts.googleapis.com/css?family=Electrolize);
 @import url(http://fonts.googleapis.com/css?family=Cuprum);
 body{font-size:14px;word-spacing:1px;
-	margin-left:auto;
-margin-right:auto;
+	/*margin-left:auto;
+margin-right:auto;*/
 	text-align:left;
 	font-family:"Trebuchet MS","Galdeano","Hiragino Sans GB","Microsoft YaHei",Trebuchet,Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;color:#000000;background-color:#ffffff;}
 *{padding:0;margin: 0;border:none;outline:none;}
