--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,7 @@ layout: default
 	<a {% if page.next %} href="{{ page.next.url }}" class="pageNav"{% endif %} {% unless page.next %} class="pageNavInvalid" {% endunless %} >下一篇</a>
 </span>
 </section>
+{% include jiathis.md %}
 {% include comments.md %}
 {% include baidutongji.md %}
 {% include googleanalytics.md %}
