Add share functions
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,7 @@ layout: default
 </span>
 </section>
 {% include jiathis.md %}
+{% include httpsshare.md %}
 {% include comments.md %}
 {% include baidutongji.md %}
 {% include googleanalytics.md %}
