--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,5 +6,5 @@ layout: default
 {{ content }}
 </section>
 {% if page.comments %}
-{% include comments.md %}
+{% include disqus.html %}
 {% endif %}
