添加评论插件
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,5 +38,6 @@ layout: default
 {% include jiathis.md %}
 {% include httpsshare.md %}
 {% include comments.md %}
+{% include disqus.html %}
 {% include baidutongji.md %}
 {% include googleanalytics.md %}
