添加评论插件
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,5 +49,6 @@
     </footer>
 
     </div>
+    <script id="dsq-count-scr" src="//duyanghao.disqus.com/count.js" async></script>
   </body>
 </html>
