添加评论插件
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,5 +37,6 @@ layout: default
 </section>
 {% include jiathis.md %}
 {% include httpsshare.md %}
+{% include disqus.html %}
 {% include baidutongji.md %}
 {% include googleanalytics.md %}
